crates/ty_python_semantic/resources/mdtest/snapshots/mro.md_-_Method_Resolution_Or…_-_`__bases__`_includes…_(d2532518c44112c8).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: mro.md - Method Resolution Order tests - `__bases__` includes a `Union`
mdtest path: crates/ty_python_semantic/resources/mdtest/mro.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from ty_extensions import reveal_mro
 2 | 
 3 | def returns_bool() -> bool:
 4 |     return True
 5 | 
 6 | class A: ...
 7 | class B: ...
 8 | 
 9 | if returns_bool():
10 |     x = A
11 | else:
12 |     x = B
13 | 
14 | reveal_type(x)  # revealed: <class 'A'> | <class 'B'>
15 | 
16 | # error: 11 [unsupported-base] "Unsupported class base with type `<class 'A'> | <class 'B'>`"
17 | class Foo(x): ...
18 | 
19 | reveal_mro(Foo)  # revealed: (<class 'Foo'>, Unknown, <class 'object'>)
```

# Diagnostics

```
warning[unsupported-base]: Unsupported class base with type `<class 'A'> | <class 'B'>`
  --> src/mdtest_snippet.py:17:11
   |
16 | # error: 11 [unsupported-base] "Unsupported class base with type `<class 'A'> | <class 'B'>`"
17 | class Foo(x): ...
   |           ^
18 |
19 | reveal_mro(Foo)  # revealed: (<class 'Foo'>, Unknown, <class 'object'>)
   |
info: ty cannot resolve a consistent MRO for class `Foo` due to this base
info: Only class objects or `Any` are supported as class bases
info: rule `unsupported-base` is enabled by default

```
